--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"tsx": "^4.20.6",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"@lucide/svelte": "^0.553.0"
 	}
 }
